--- a/iceberg-rust/Cargo.toml
+++ b/iceberg-rust/Cargo.toml
@@ -11,7 +11,7 @@ repository = "https://github.com/JanKaul/iceberg-rust"
 
 [dependencies]
 apache-avro = { workspace = true }
-arrow = { workspace = true }
+arrow = { workspace = true, version = "53.3.0" }
 async-trait = { workspace = true }
 futures = { workspace = true }
 getrandom = "0.2.8"
@@ -24,7 +24,7 @@ serde_json = { workspace = true }
 url = { workspace = true }
 uuid = { workspace = true }
 tokio = { version = "1.0", features = ["sync"] }
-derive_builder = "0.12.0"
+derive_builder = "0.20.2"
 sqlparser = { workspace = true }
 thrift = { version = "0.17.0", default-features = false }
 thiserror = { workspace = true }
